--- a/orion-test/pom.xml
+++ b/orion-test/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>orion-connector-hrpc</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>leemos</groupId>
+			<artifactId>orion-config</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
