--- a/orion-registry/pom.xml
+++ b/orion-registry/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>leemos</groupId>
 		<artifactId>orion</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>release-1.0.0</version>
 	</parent>
 	<artifactId>orion-registry</artifactId>
 </project>
