--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>leemos</groupId>
 	<artifactId>orion</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>release-1.0.0</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -66,18 +66,33 @@
 					<target>${java.version}</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+
 	</build>
 
 	<distributionManagement>
 		<repository>
-			<id>maven-releases</id>
-			<url>http://localhost:8081/repository/maven-releases/</url>
+			<id>test</id>
+			<url>http://43.132.189.7:8081/repository/test-releases/</url>
 		</repository>
-		<snapshotRepository>
-			<id>maven-snapshots</id>
-			<url>http://localhost:8081/repository/maven-snapshots/</url>
-		</snapshotRepository>
 	</distributionManagement>
 
 	<modules>
@@ -88,7 +103,6 @@
 		<module>orion-connector-hrpc</module>
 		<module>orion-registry</module>
 		<module>orion-client-rpc</module>
-		<module>orion-test</module>
 		<module>orion-codec-rpc</module>
 		<module>orion-codec-hrpc</module>
 		<module>orion-client-hrpc</module>
