--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,17 @@
 				</executions>
 			</plugin>
 		</plugins>
-
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.properties</include>
+=				</includes>
+=			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 	</build>
 
 	<distributionManagement>
